updated server.js with frontend env link, package.json with correct url

--- a/client/package.json
+++ b/client/package.json
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-   "proxy": "hhttps://code-guardian.onrender.com"
+   "proxy": "https://code-guardian.onrender.com"
 }
