--- a/client/package.json
+++ b/client/package.json
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-   "proxy": "https://code-guardian.onrender.com"
+   "proxy": "http://localhost:5000"
 }
