Updated package.json with backend live link

--- a/client/package.json
+++ b/client/package.json
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-   "proxy": "https://code-guardian-frontend.onrender.com"
+   "proxy": "https://code-guardian-backend.onrender.com"
 }
