--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,17 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0",
+    "colors": "^1.4.0",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
+    "crashed": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
+    "morgan": "^1.10.0",
     "pdfkit": "^0.16.0"
   },
   "devDependencies": {
