--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "chalk": "^5.4.1",
     "cheerio": "^1.0.0",
     "colors": "^1.4.0",
     "compression": "^1.8.0",
@@ -22,6 +23,7 @@
     "crashed": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
