--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,12 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.9",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
